# storage-simulation

./: .gitmodules  Cargo.toml  main.py  pyproject.toml
benches/: find.rs
data/: .gitignore  ingest.py
data-saved/: 1740809166.csv  ingest.py
data-saved/ingest/: 1740832753.csv  1740885446.csv
data/saved/: ingest.py
data/saved/ingest/: 1740985709-sys.csv
proptest-regressions/tests/: mod.txt
src/: lib.rs  main.rs
src/tests/: mod.regressions  mod.rs
