[package]
name = "storage-simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.96", features = ["backtrace"] }
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.10.0"
rustc-hash = "2.1.1"
tikv-jemallocator = "0.6.0"

[dev-dependencies]
proptest = "1.6.0"

[profile.test.package."*"]
opt-level = 3